--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
 
             - name: Install and Build
               run: |
-                  cd docs
+                  cd my-website
                   npm install
                   npm run build
                   mv build ../build
